@@ -22,7 +22,6 @@ import org.apache.kafka.common.config.SaslConfigs;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -32,7 +31,7 @@ public class NoneConnectorClientConfigOverridePolicyTest extends BaseConnectorCl
 
     @Test
     public void testNoOverrides() {
-        testValidOverride(Collections.emptyMap());
+        testValidOverride(Map.of());
     }
 
     @Test
