@@ -73,9 +73,7 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -156,27 +154,27 @@ public class AbstractHerderTest {
     private static final ClusterConfigState SNAPSHOT = new ClusterConfigState(
             1,
             null,
-            Collections.singletonMap(CONN1, 3),
-            Collections.singletonMap(CONN1, CONN1_CONFIG),
-            Collections.singletonMap(CONN1, TargetState.STARTED),
+            Map.of(CONN1, 3),
+            Map.of(CONN1, CONN1_CONFIG),
+            Map.of(CONN1, TargetState.STARTED),
             TASK_CONFIGS_MAP,
-            Collections.emptyMap(),
-            Collections.emptyMap(),
-            Collections.singletonMap(CONN1, new AppliedConnectorConfig(CONN1_CONFIG)),
-            Collections.emptySet(),
-            Collections.emptySet());
+            Map.of(),
+            Map.of(),
+            Map.of(CONN1, new AppliedConnectorConfig(CONN1_CONFIG)),
+            Set.of(),
+            Set.of());
     private static final ClusterConfigState SNAPSHOT_NO_TASKS = new ClusterConfigState(
             1,
             null,
-            Collections.singletonMap(CONN1, 3),
-            Collections.singletonMap(CONN1, CONN1_CONFIG),
-            Collections.singletonMap(CONN1, TargetState.STARTED),
-            Collections.emptyMap(),
-            Collections.emptyMap(),
-            Collections.emptyMap(),
-            Collections.singletonMap(CONN1, new AppliedConnectorConfig(CONN1_CONFIG)),
-            Collections.emptySet(),
-            Collections.emptySet());
+            Map.of(CONN1, 3),
+            Map.of(CONN1, CONN1_CONFIG),
+            Map.of(CONN1, TargetState.STARTED),
+            Map.of(),
+            Map.of(),
+            Map.of(),
+            Map.of(CONN1, new AppliedConnectorConfig(CONN1_CONFIG)),
+            Set.of(),
+            Set.of());
 
     private final String workerId = "workerId";
     private final String kafkaClusterId = "I4ZmrWqfT2e-upky_4fdPA";
@@ -198,7 +196,7 @@ public class AbstractHerderTest {
         AbstractHerder herder = testHerder();
 
         when(configStore.snapshot()).thenReturn(SNAPSHOT);
-        assertEquals(Collections.singleton(CONN1), new HashSet<>(herder.connectors()));
+        assertEquals(Set.of(CONN1), Set.copyOf(herder.connectors()));
     }
 
     @Test
@@ -220,7 +218,7 @@ public class AbstractHerderTest {
 
         AbstractHerder herder = testHerder();
 
-        when(herder.rawConfig(connectorName)).thenReturn(Collections.singletonMap(
+        when(herder.rawConfig(connectorName)).thenReturn(Map.of(
                 ConnectorConfig.CONNECTOR_CLASS_CONFIG, SampleSourceConnector.class.getName()
         ));
 
@@ -228,7 +226,7 @@ public class AbstractHerderTest {
                 .thenReturn(new ConnectorStatus(connectorName, AbstractStatus.State.RUNNING, workerId, generation));
 
         when(statusStore.getAll(connectorName))
-                .thenReturn(Collections.singletonList(
+                .thenReturn(List.of(
                         new TaskStatus(taskId, AbstractStatus.State.UNASSIGNED, workerId, generation)));
 
         ConnectorStateInfo state = herder.connectorStatus(connectorName);
@@ -255,13 +253,13 @@ public class AbstractHerderTest {
         AbstractHerder herder = testHerder();
 
         when(herder.rawConfig(connectorName))
-                .thenReturn(Collections.singletonMap(ConnectorConfig.CONNECTOR_CLASS_CONFIG, "missing"));
+                .thenReturn(Map.of(ConnectorConfig.CONNECTOR_CLASS_CONFIG, "missing"));
 
         when(statusStore.get(connectorName))
                 .thenReturn(new ConnectorStatus(connectorName, AbstractStatus.State.RUNNING, workerId, generation));
 
         when(statusStore.getAll(connectorName))
-                .thenReturn(Collections.singletonList(
+                .thenReturn(List.of(
                         new TaskStatus(taskId, AbstractStatus.State.UNASSIGNED, workerId, generation)));
 
         ConnectorStateInfo state = herder.connectorStatus(connectorName);
@@ -292,7 +290,7 @@ public class AbstractHerderTest {
 
         assertEquals(CONN1, info.name());
         assertEquals(CONN1_CONFIG, info.config());
-        assertEquals(Arrays.asList(TASK0, TASK1, TASK2), info.tasks());
+        assertEquals(List.of(TASK0, TASK1, TASK2), info.tasks());
         assertEquals(ConnectorType.SOURCE, info.type());
     }
 
@@ -332,7 +330,7 @@ public class AbstractHerderTest {
 
         assertEquals(CONN1, info.name());
         assertEquals(CONN1_CONFIG, info.config());
-        assertEquals(Arrays.asList(TASK0, TASK1, TASK2), info.tasks());
+        assertEquals(List.of(TASK0, TASK1, TASK2), info.tasks());
         assertEquals(ConnectorType.UNKNOWN, info.type());
     }
 
@@ -468,8 +466,8 @@ public class AbstractHerderTest {
     public void testConfigValidationEmptyConfig() {
         AbstractHerder herder = createConfigValidationHerder(SampleSourceConnector.class, noneConnectorClientConfigOverridePolicy, 0);
 
-        assertThrows(BadRequestException.class, () -> herder.validateConnectorConfig(Collections.emptyMap(), s -> null, false));
-        verify(transformer).transform(Collections.emptyMap());
+        assertThrows(BadRequestException.class, () -> herder.validateConnectorConfig(Map.of(), s -> null, false));
+        verify(transformer).transform(Map.of());
         assertEquals(worker.getPlugins(), plugins);
     }
 
@@ -478,13 +476,13 @@ public class AbstractHerderTest {
         final Class<? extends Connector> connectorClass = SampleSourceConnector.class;
         AbstractHerder herder = createConfigValidationHerder(connectorClass, noneConnectorClientConfigOverridePolicy);
 
-        Map<String, String> config = Collections.singletonMap(ConnectorConfig.CONNECTOR_CLASS_CONFIG, connectorClass.getName());
+        Map<String, String> config = Map.of(ConnectorConfig.CONNECTOR_CLASS_CONFIG, connectorClass.getName());
         ConfigInfos result = herder.validateConnectorConfig(config, s -> null, false);
 
         // We expect there to be errors due to the missing name and .... Note that these assertions depend heavily on
         // the config fields for SourceConnectorConfig, but we expect these to change rarely.
         assertEquals(connectorClass.getName(), result.name());
-        assertEquals(Arrays.asList(ConnectorConfig.COMMON_GROUP, ConnectorConfig.TRANSFORMS_GROUP,
+        assertEquals(List.of(ConnectorConfig.COMMON_GROUP, ConnectorConfig.TRANSFORMS_GROUP,
                 ConnectorConfig.PREDICATES_GROUP, ConnectorConfig.ERROR_GROUP,
                 SourceConnectorConfig.TOPIC_CREATION_GROUP, SourceConnectorConfig.EXACTLY_ONCE_SUPPORT_GROUP,
                 SourceConnectorConfig.OFFSETS_TOPIC_GROUP), result.groups());
@@ -572,7 +570,7 @@ public class AbstractHerderTest {
         AbstractHerder herder = createConfigValidationHerder(connectorClass, noneConnectorClientConfigOverridePolicy);
 
         // 2 transform aliases defined -> 2 plugin lookups
-        Mockito.lenient().when(plugins.transformations()).thenReturn(Collections.singleton(transformationPluginDesc()));
+        Mockito.lenient().when(plugins.transformations()).thenReturn(Set.of(transformationPluginDesc()));
         Mockito.lenient().when(plugins.newPlugin(SampleTransformation.class.getName(), null, classLoader)).thenReturn(new SampleTransformation());
 
         // Define 2 transformations. One has a class defined and so can get embedded configs, the other is missing
@@ -591,7 +589,7 @@ public class AbstractHerderTest {
         // the config fields for SourceConnectorConfig, but we expect these to change rarely.
         assertEquals(connectorClass.getName(), result.name());
         // Each transform also gets its own group
-        List<String> expectedGroups = Arrays.asList(
+        List<String> expectedGroups = List.of(
                 ConnectorConfig.COMMON_GROUP,
                 ConnectorConfig.TRANSFORMS_GROUP,
                 ConnectorConfig.PREDICATES_GROUP,
@@ -626,8 +624,8 @@ public class AbstractHerderTest {
         final Class<? extends Connector> connectorClass = SampleSourceConnector.class;
         AbstractHerder herder = createConfigValidationHerder(connectorClass, noneConnectorClientConfigOverridePolicy);
 
-        Mockito.lenient().when(plugins.transformations()).thenReturn(Collections.singleton(transformationPluginDesc()));
-        Mockito.lenient().when(plugins.predicates()).thenReturn(Collections.singleton(predicatePluginDesc()));
+        Mockito.lenient().when(plugins.transformations()).thenReturn(Set.of(transformationPluginDesc()));
+        Mockito.lenient().when(plugins.predicates()).thenReturn(Set.of(predicatePluginDesc()));
         Mockito.lenient().when(plugins.newPlugin(SampleTransformation.class.getName(), null, classLoader)).thenReturn(new SampleTransformation());
         Mockito.lenient().when(plugins.newPlugin(SamplePredicate.class.getName(), null, classLoader)).thenReturn(new SamplePredicate());
 
@@ -650,7 +648,7 @@ public class AbstractHerderTest {
         // the config fields for SourceConnectorConfig, but we expect these to change rarely.
         assertEquals(connectorClass.getName(), result.name());
         // Each transform also gets its own group
-        List<String> expectedGroups = Arrays.asList(
+        List<String> expectedGroups = List.of(
                 ConnectorConfig.COMMON_GROUP,
                 ConnectorConfig.TRANSFORMS_GROUP,
                 ConnectorConfig.PREDICATES_GROUP,
@@ -716,7 +714,7 @@ public class AbstractHerderTest {
         // the config fields for SourceConnectorConfig, but we expect these to change rarely.
         assertEquals(SampleSourceConnector.class.getName(), result.name());
         // Each transform also gets its own group
-        List<String> expectedGroups = Arrays.asList(
+        List<String> expectedGroups = List.of(
             ConnectorConfig.COMMON_GROUP,
             ConnectorConfig.TRANSFORMS_GROUP,
             ConnectorConfig.PREDICATES_GROUP,
@@ -891,7 +889,7 @@ public class AbstractHerderTest {
         addConfigKey(keys, "config.b2", "group B");
         addConfigKey(keys, "config.c1", "group C");
 
-        List<String> groups = Arrays.asList("groupB", "group C");
+        List<String> groups = List.of("groupB", "group C");
         List<ConfigValue> values = new ArrayList<>();
         addValue(values, "config.a1", "value.a1");
         addValue(values, "config.b1", "value.b1");
@@ -922,7 +920,7 @@ public class AbstractHerderTest {
         addConfigKey(keys, "config.b2", "group B");
         addConfigKey(keys, "config.c1", "group C");
 
-        List<String> groups = Arrays.asList("groupB", "group C");
+        List<String> groups = List.of("groupB", "group C");
         List<ConfigValue> values = new ArrayList<>();
         addValue(values, "config.a1", "value.a1");
         addValue(values, "config.b1", "value.b1");
@@ -953,7 +951,7 @@ public class AbstractHerderTest {
         addConfigKey(keys, "config.b2", "group B");
         addConfigKey(keys, "config.c1", "group C");
 
-        List<String> groups = Arrays.asList("groupB", "group C");
+        List<String> groups = List.of("groupB", "group C");
         List<ConfigValue> values = new ArrayList<>();
         addValue(values, "config.a1", "value.a1");
         addValue(values, "config.b1", "value.b1");
@@ -1143,7 +1141,7 @@ public class AbstractHerderTest {
         when(worker.getPlugins()).thenReturn(plugins);
         when(plugins.newConnector(anyString(), any())).thenThrow(new ConnectException("No class found"));
         AbstractHerder herder = testHerder();
-        assertEquals(ConnectorType.UNKNOWN, herder.connectorType(Collections.singletonMap(ConnectorConfig.CONNECTOR_CLASS_CONFIG, connName)));
+        assertEquals(ConnectorType.UNKNOWN, herder.connectorType(Map.of(ConnectorConfig.CONNECTOR_CLASS_CONFIG, connName)));
     }
 
     @Test
@@ -1155,7 +1153,7 @@ public class AbstractHerderTest {
     @Test
     public void testGetConnectorTypeWithEmptyConfig() {
         AbstractHerder herder = testHerder();
-        assertEquals(ConnectorType.UNKNOWN, herder.connectorType(Collections.emptyMap()));
+        assertEquals(ConnectorType.UNKNOWN, herder.connectorType(Map.of()));
     }
 
     @Test
@@ -1170,9 +1168,9 @@ public class AbstractHerderTest {
 
     @Test
     public void testConnectorOffsets() throws Exception {
-        ConnectorOffsets offsets = new ConnectorOffsets(Arrays.asList(
-                new ConnectorOffset(Collections.singletonMap("partitionKey", "partitionValue"), Collections.singletonMap("offsetKey", "offsetValue")),
-                new ConnectorOffset(Collections.singletonMap("partitionKey", "partitionValue2"), Collections.singletonMap("offsetKey", "offsetValue"))
+        ConnectorOffsets offsets = new ConnectorOffsets(List.of(
+                new ConnectorOffset(Map.of("partitionKey", "partitionValue"), Map.of("offsetKey", "offsetValue")),
+                new ConnectorOffset(Map.of("partitionKey", "partitionValue2"), Map.of("offsetKey", "offsetValue"))
         ));
         @SuppressWarnings("unchecked")
         ArgumentCaptor<Callback<ConnectorOffsets>> workerCallback = ArgumentCaptor.forClass(Callback.class);
@@ -1203,7 +1201,7 @@ public class AbstractHerderTest {
 
         when(snapshot.taskCount(CONN1)).thenReturn(TASK_CONFIG.size());
         List<Map<String, String>> alteredTaskConfigs = new ArrayList<>(TASK_CONFIGS);
-        alteredTaskConfigs.set(alteredTaskConfigs.size() - 1, Collections.emptyMap());
+        alteredTaskConfigs.set(alteredTaskConfigs.size() - 1, Map.of());
         // Last task config is different; should report a change
         assertTrue(AbstractHerder.taskConfigsChanged(snapshot, CONN1, alteredTaskConfigs));
 
@@ -1220,15 +1218,15 @@ public class AbstractHerderTest {
         ClusterConfigState snapshotWithNoAppliedConfig = new ClusterConfigState(
                 1,
                 null,
-                Collections.singletonMap(CONN1, 3),
-                Collections.singletonMap(CONN1, CONN1_CONFIG),
-                Collections.singletonMap(CONN1, TargetState.STARTED),
+                Map.of(CONN1, 3),
+                Map.of(CONN1, CONN1_CONFIG),
+                Map.of(CONN1, TargetState.STARTED),
                 TASK_CONFIGS_MAP,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptySet(),
-                Collections.emptySet()
+                Map.of(),
+                Map.of(),
+                Map.of(),
+                Set.of(),
+                Set.of()
         );
         assertTrue(AbstractHerder.taskConfigsChanged(snapshotWithNoAppliedConfig, CONN1, TASK_CONFIGS));
 
@@ -1238,15 +1236,15 @@ public class AbstractHerderTest {
         ClusterConfigState snapshotWithDifferentAppliedConfig = new ClusterConfigState(
                 1,
                 null,
-                Collections.singletonMap(CONN1, 3),
-                Collections.singletonMap(CONN1, CONN1_CONFIG),
-                Collections.singletonMap(CONN1, TargetState.STARTED),
+                Map.of(CONN1, 3),
+                Map.of(CONN1, CONN1_CONFIG),
+                Map.of(CONN1, TargetState.STARTED),
                 TASK_CONFIGS_MAP,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.singletonMap(CONN1, new AppliedConnectorConfig(appliedConfig)),
-                Collections.emptySet(),
-                Collections.emptySet()
+                Map.of(),
+                Map.of(),
+                Map.of(CONN1, new AppliedConnectorConfig(appliedConfig)),
+                Set.of(),
+                Set.of()
         );
         assertTrue(AbstractHerder.taskConfigsChanged(snapshotWithDifferentAppliedConfig, CONN1, TASK_CONFIGS));
     }
@@ -1254,12 +1252,12 @@ public class AbstractHerderTest {
     protected void addConfigKey(Map<String, ConfigDef.ConfigKey> keys, String name, String group) {
         ConfigDef configDef = new ConfigDef().define(name, ConfigDef.Type.STRING, null, null,
                 ConfigDef.Importance.HIGH, "doc", group, 10,
-                ConfigDef.Width.MEDIUM, "display name", Collections.emptyList(), null, null);
+                ConfigDef.Width.MEDIUM, "display name", List.of(), null, null);
         keys.putAll(configDef.configKeys());
     }
 
     protected void addValue(List<ConfigValue> values, String name, String value, String... errors) {
-        values.add(new ConfigValue(name, value, new ArrayList<>(), Arrays.asList(errors)));
+        values.add(new ConfigValue(name, value, new ArrayList<>(), List.of(errors)));
     }
 
     protected void assertInfoKey(ConfigInfos infos, String name, String group) {
@@ -1277,7 +1275,7 @@ public class AbstractHerderTest {
         ConfigValueInfo info = findInfo(infos, name).configValue();
         assertEquals(name, info.name());
         assertEquals(value, info.value());
-        assertEquals(Arrays.asList(errors), info.errors());
+        assertEquals(List.of(errors), info.errors());
     }
 
     protected ConfigInfo findInfo(ConfigInfos infos, String name) {
@@ -1293,7 +1291,7 @@ public class AbstractHerderTest {
     }
 
     private void testConfigProviderRegex(String rawConnConfig, boolean expected) {
-        Set<String> keys = keysWithVariableValues(Collections.singletonMap("key", rawConnConfig), ConfigTransformer.DEFAULT_PATTERN);
+        Set<String> keys = keysWithVariableValues(Map.of("key", rawConnConfig), ConfigTransformer.DEFAULT_PATTERN);
         boolean actual = !keys.isEmpty() && keys.contains("key");
         assertEquals(expected, actual, String.format("%s should have matched regex", rawConnConfig));
     }
